# nostr-sdk-ffi

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  build.rs  justfile  rust-toolchain.toml  uniffi-kmp.toml  uniffi.toml
.cargo/: config.toml
.github/workflows/: build-android.yml  build-freebsd.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  publish-android.yml  publish-csharp.yml  publish-jar.yml  publish-kmp.yml  publish-python.yml  publish-sdk-python.yaml  publish-swift.yml  publish.yml
android/: assemble.sh
android/lib/: build.gradle.kts
contrib/scripts/: check-crate.sh  check-fmt.sh  check.sh
csharp/: README.md  assemble.sh
csharp/Nostr.Sdk/: .gitignore  Nostr.Sdk.csproj
csharp/Rust.Nostr.Sdk/: Rust.Nostr.Sdk.csproj
doc/: aarch64-unknown-freebsd.md
jvm/: .gitignore  assemble.sh
jvm/lib/: build.gradle.kts
kmp/: .gitignore  assemble.sh
kmp/gradle/: libs.versions.toml
kmp/nostr-sdk-kmp/: build.gradle.kts  consumer-rules.pro
kmp/nostr-sdk-kmp/src/nativeInterop/cinterop/: nostr_sdk.def
python/: Dockerfile  MANIFEST.in  README.md  assemble.sh  buildwheel.sh  publish.sh  pyproject.toml  setup.py
python/examples/: blacklist.py  client-with-opts.py  client.py  custom-database.py  custom-websocket-client.py  limits.py  monitor.py  relay_builder.py  stream-events.py  tor.py
python/scripts/: generate-linux-aarch64.sh  generate-linux-x86_64.sh  generate-macos-arm64.sh  generate-macos-x86_64.sh  generate-windows.sh
scripts/: all.sh  android.sh  freebsd.sh  ios.sh  linux.sh  macos.sh  windows.sh
src/: authenticator.rs  connect.rs  error.rs  future.rs  lib.rs  logger.rs  monitor.rs  net.rs  notifications.rs  parser.rs  policy.rs  proxy.rs  relay_builder.rs  stream.rs  wasm32_time.rs
src/client/: builder.rs  mod.rs  notification.rs  options.rs  output.rs  req_target.rs  stream.rs
src/client/api/: mod.rs  send_event.rs
src/database/: custom.rs  mod.rs
src/gossip/: mod.rs
src/nwc/: builder.rs  mod.rs  options.rs
src/protocol/: filter.rs  util.rs
src/protocol/event/: builder.rs  kind.rs  mod.rs  unsigned.rs
src/protocol/event/tag/: kind.rs  list.rs  mod.rs  standard.rs
src/protocol/key/: mod.rs  secret_key.rs
src/protocol/message/: client.rs  relay.rs
src/protocol/nips/: mod.rs  nip01.rs  nip05.rs  nip06.rs  nip09.rs  nip10.rs  nip11.rs  nip15.rs  nip17.rs  nip19.rs  nip21.rs  nip22.rs  nip34.rs  nip46.rs  nip47.rs  nip51.rs  nip53.rs  nip57.rs  nip59.rs  nip65.rs  nip73.rs  nip88.rs  nip94.rs  nip96.rs  nip98.rs
src/protocol/nips/nip13/: macros.rs  mod.rs
src/protocol/signer/: macros.rs  mod.rs
src/protocol/types/: contact.rs  mod.rs  time.rs  url.rs
src/relay/: capabilities.rs  limits.rs  mod.rs  options.rs  stats.rs  status.rs
src/transport/: websocket.rs
swift/: .gitignore  Package.swift  assemble.sh  build-xcframework.sh
