[package]
name = "nostr-sdk-ffi"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "nostr_sdk_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = [
    "nip04",
    "nip06",
    "nip44",
    "nip46",
    "nip47",
    "nip49",
    "nip57",
    "nip59",
    "nip96",
    "nip98",
    "connect",
    "nwc",
    "lmdb",
    "relay-builder",
    "logger",
]
nip04 = ["nostr/nip04"]
nip06 = ["nostr/nip06"]
nip44 = ["nostr/nip44"]
nip46 = ["nostr/nip46"]
nip47 = ["nostr/nip47"]
nip49 = ["nostr/nip49"]
nip57 = ["nostr/nip57"]
nip59 = ["nostr/nip59", "nostr-sdk/nip59"]
nip96 = ["nostr/nip96"]
nip98 = ["nostr/nip98"]
connect = ["dep:nostr-connect"]
nwc = ["dep:nwc"]
tor = ["nostr-connect?/tor", "nostr-sdk/tor", "nwc?/tor"]
lmdb = ["dep:nostr-lmdb"]
ndb = ["dep:nostr-ndb"]
relay-builder = ["dep:nostr-relay-builder"]
logger = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
async-trait = "0.1.89"
async-wsocket = "0.13"
futures-util = "0.3"
nostr = { git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66", features = ["std"] }
nostr-connect = { git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66", optional = true }
nostr-gossip = { git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66" }
nostr-gossip-memory = { git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66" }
nostr-lmdb = { git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66", optional = true }
nostr-ndb = { git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66", optional = true }
nostr-relay-builder = { git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66", optional = true }
nostr-sdk  = {git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66", default-features = false }
nwc = { git = "https://github.com/rust-nostr/nostr", rev = "19970a4550a223e7376138c9ab944e05b4ce4c66", optional = true }
tokio = { version = "1.48.0", features = ["sync"] }
tracing = { version = "0.1.41", features = ["std"], optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
uniffi = { version = "=0.30.0", features = ["tokio", "cli"] } # cli feature required for the `uniffi-bindgen` binary

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"

[patch.crates-io]
# Patch that uses bitcoin_hashes v0.14
bip39 = { git = "https://github.com/yukibtc/rust-bip39", branch = "v2.1.0+hashes-v0.14" }
