[package]
name = "nostr-sdk-ffi"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "nostr_sdk_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = [
    "nip04",
    "nip06",
    "nip44",
    "nip46",
    "nip47",
    "nip49",
    "nip59",
    "pow-multi-thread",
    "connect",
    "nwc",
    "gossip-sqlite",
    "lmdb",
    "relay-builder",
    "logger",
]
nip04 = ["nostr/nip04"]
nip06 = ["nostr/nip06"]
nip44 = ["nostr/nip44"]
nip46 = ["nostr/nip46"]
nip47 = ["nostr/nip47"]
nip49 = ["nostr/nip49"]
nip59 = ["nostr/nip59"]
pow-multi-thread = ["nostr/pow-multi-thread"]
connect = ["dep:nostr-connect"]
nwc = ["dep:nwc"]
gossip-sqlite = ["dep:nostr-gossip-sqlite"]
lmdb = ["dep:nostr-lmdb"]
ndb = ["dep:nostr-ndb"]
relay-builder = ["dep:nostr-relay-builder"]
logger = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
async-trait = "0.1.89"
async-wsocket = { version = "0.15", default-features = false }
futures-util = "0.3"
nostr = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac", features = ["std"] }
nostr-connect = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac", optional = true }
nostr-database = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac" }
nostr-gossip = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac" }
nostr-gossip-memory = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac" }
nostr-sdk  = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac", default-features = false }
nwc = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac", optional = true }
tokio = { version = "=1.49.0", default-features = false, features = ["sync"] }
tracing = { version = "0.1.41", features = ["std"], optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
uniffi = { version = "=0.29.5", features = ["tokio", "cli"] } # cli feature required for the `uniffi-bindgen` binary

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nostr-gossip-sqlite = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac", optional = true }
nostr-lmdb = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac", optional = true }
nostr-ndb = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac", optional = true }
nostr-relay-builder = { git = "https://github.com/rust-nostr/nostr", rev = "83fa932f89dafcbdcf26b4d70da5c9124c2579ac", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom2 = { package = "getrandom", version = "=0.2.17", features = ["js"] }
getrandom3 = { package = "getrandom", version = "=0.3.2", features = ["wasm_js"] }
getrandom4 = { package = "getrandom", version = "=0.4.2", features = ["wasm_js"] }
universal-time = "0.3.0"
web-time = "1.1.0"

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"

[patch.crates-io]
# Patch that uses bitcoin_hashes v0.14
bip39 = { git = "https://github.com/yukibtc/rust-bip39", branch = "v2.1.0+hashes-v0.14" }
